fixed images on mobile

--- a/apps/web/pages/home.module.scss
+++ b/apps/web/pages/home.module.scss
@@ -134,3 +134,9 @@
   justify-content: space-evenly;
   align-content: center;
 }
+
+@media screen and (max-width: 500px) {
+  .cars-container-individual-div > img {
+    max-width: 250px;
+  }
+}
